Last update Pc fixe

--- a/BOUTEILLE AMBROSIA CONFIGURATEUR/CONFIG/main.css
+++ b/BOUTEILLE AMBROSIA CONFIGURATEUR/CONFIG/main.css
@@ -149,10 +149,14 @@ h1
 	border : 0.07rem solid;
 	border-radius : 10px;
 	text-align : center;
-	background-color : rgba(0, 0, 290, 0.2);
 	font-family : Helvetica;
 	font-size : 15px;
 	text-decoration : none;
+	background: -moz-linear-gradient(top,  rgba(30,87,153,0.54) 1%, rgba(125,185,232,0) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top,  rgba(30,87,153,0.54) 1%,rgba(125,185,232,0) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom,  rgba(30,87,153,0.54) 1%,rgba(125,185,232,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8a1e5799', endColorstr='#007db9e8',GradientType=0 ); /* IE6-9 */
+
 }
 
 #button-usdz{
